Fix 2 dots that are visible on light backgrounds #1383

--- a/resources/assets/sass/_app.scss
+++ b/resources/assets/sass/_app.scss
@@ -141,6 +141,7 @@ body {
 			top: -58px;
 			transition: all .35s ease-in-out;
 			z-index: 1;
+			overflow: hidden;
 			ul {
 				display: inline-block;
 				list-style: none;
